versions/v2.8/modules/en/pages/integrations/integrations.adoc
= Integrations in {rancher-product-name}

Prime is the Rancher ecosystem's enterprise offering, with additional security, extended lifecycles, and access to Prime-exclusive documentation. Rancher Prime installation assets are hosted on a trusted SUSE registry, owned and managed by Rancher. The trusted Prime registry includes only stable releases that have been community-tested.

Prime also offers options for production support, as well as add-ons to your subscription that tailor to your commercial needs.

To learn more and get started with Rancher Prime, please visit https://www.rancher.com/quick-start[this page].

To learn more about Rancher's ecosystem, refer to the following integrations:

* xref:integrations/kubernetes-distributions.adoc[Kubernetes Distributions]
* xref:integrations/rancher-extensions.adoc[{rancher-extensions-product-name}]
* xref:integrations/harvester/overview.adoc[{harvester-product-name}]
* xref:integrations/longhorn/overview.adoc[{longhorn-product-name}]
* xref:integrations/neuvector/overview.adoc[{neuvector-product-name}]
* xref:integrations/kubewarden.adoc[{kubewarden-product-name}]
* xref:integrations/elemental.adoc[{elemental-product-name}]
* xref:integrations/fleet/overview.adoc[{fleet-product-name}]
* xref:integrations/rancher-desktop.adoc[Kubernetes on the Desktop with Rancher Desktop]
* xref:integrations/cluster-api/overview.adoc[{turtles-product-name}]
