versions/v2.9/modules/en/pages/integrations/integrations.adoc
= Integrations in {rancher-product-name}
:page-languages: [en, zh]
:revdate: 2025-07-07
:page-revdate: {revdate}
:community-path: integrations-in-rancher/index.adoc 
:product-path: integrations/integrations.adoc
ifeval::["{build-type}" != "community"]
:xref-longhorn-overview: xref:integrations/longhorn/overview.adoc
:xref-k8s-distros: xref:integrations/kubernetes-distributions.adoc
:xref-harvester-overview: xref:integrations/harvester/overview.adoc
:xref-neuvector-overview: xref:integrations/neuvector/overview.adoc
:xref-kubewarden: xref:integrations/kubewarden.adoc
:xref-elemental: xref:integrations/elemental.adoc
:xref-fleet-overview: xref:integrations/fleet/overview.adoc
:xref-suse-observability: xref:integrations/suse-observability.adoc
:xref-rancher-desktop: xref:integrations/rancher-desktop.adoc
:xref-turtles-overview: xref:integrations/cluster-api/overview.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-longhorn-overview: xref:integrations-in-rancher/longhorn/overview.adoc
:xref-k8s-distros: xref:integrations-in-rancher/kubernetes-distributions/index.adoc
:xref-harvester-overview: xref:integrations-in-rancher/harvester/overview.adoc
:xref-neuvector-overview: xref:integrations-in-rancher/neuvector/overview.adoc
:xref-kubewarden: xref:integrations-in-rancher/kubewarden/index.adoc
:xref-elemental: xref:integrations-in-rancher/elemental/index.adoc
:xref-fleet-overview: xref:integrations-in-rancher/fleet/overview.adoc
:xref-suse-observability: xref:integrations-in-rancher/suse-observability/index.adoc
:xref-rancher-desktop: xref:integrations-in-rancher/rancher-desktop.adoc
:xref-turtles-overview: xref:integrations-in-rancher/cluster-api/overview.adoc
endif::[]

Prime is the Rancher ecosystem's enterprise offering, with additional security, extended lifecycles, and access to Prime-exclusive documentation. Rancher Prime installation assets are hosted on a trusted SUSE registry, owned and managed by Rancher. The trusted Prime registry includes only stable releases that have been community-tested.

Prime also offers options for production support, as well as add-ons to your subscription that tailor to your commercial needs.

To learn more and get started with Rancher Prime, please visit https://www.rancher.com/quick-start[this page].

To learn more about Rancher's ecosystem, refer to the following integrations:

* xref:integrations/kubernetes-distributions.adoc[Kubernetes Distributions]
* {xref-harvester-overview}[{harvester-product-name}]
* {xref-longhorn-overview}[{longhorn-product-name}]
* {xref-neuvector-overview}[{neuvector-product-name}]
* {xref-kubewarden}[{kubewarden-product-name}]
* {xref-elemental}[{elemental-product-name}]
* {xref-fleet-overview}[{fleet-product-name}]
* {xref-suse-observability}[{stackstate-product-name}]
* {xref-rancher-desktop}[Kubernetes on the Desktop with Rancher Desktop]
* {xref-turtles-overview}[{turtles-product-name}]
